# minesweeper-1v1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  justfile  rustfmt.toml
client/: Cargo.toml  Trunk.toml  index.html
client/config/: settings.ron
client/src/: main.rs
client/src/gui/: board.rs  colors.rs  gameplay.rs  mine_image.rs  mod.rs  strings.rs
client/src/gui/game_panel/: mod.rs  player_row.rs  players_section.rs  progress_row.rs  progress_section.rs  to_win_section.rs  turn_indicator.rs
client/src/gui/game_panel/lobby/: game_info_card.rs  game_list.rs  join_game_form.rs  mod.rs  new_game_form.rs  waiting.rs
client/src/gui/game_panel/widgets/: avatar_circle.rs  avatar_row.rs  game_card.rs  mod.rs
client/src/networking/: mod.rs
core/: Cargo.toml  README.md
core/benches/: selected.rs
core/examples/: visual.rs
core/src/: board.rs  cell.rs  game.rs  lib.rs
core/src/graphics/: graphics.rs  mod.rs  point.rs  size.rs
minesboomer/minesboomer_client/: Cargo.toml
minesboomer/minesboomer_client/src/: main.rs
minesboomer/minesboomer_client/src/gui/: gameplay.rs  mine_image.rs  mod.rs
minesboomer/minesboomer_client/src/networking/: mod.rs
minesboomer/minesboomer_server/: Cargo.toml
minesboomer/minesboomer_server/src/: main.rs
minesboomer/minesboomer_server/src/server/: game.rs  mod.rs
multiplayer/: Cargo.toml
multiplayer/src/: lib.rs  multiplayer.rs  player.rs
multiplayer/src/utils/: messages.rs
multiplayer/src/utils/serializables/: mod.rs  serializable_board.rs
server/: Cargo.toml
server/src/: main.rs
server/src/server/: game.rs  mod.rs  server.rs
