[package]
name = "minesboomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#

[dependencies]
minesweeper_multiplayer = { path = "../multiplayer" }

egui = "0.34"
egui_extras = { version = "0.34", features = ["all_loaders"] }
eframe = "0.34"
image = "0.25"

ewebsock = "0.8.0"

futures-util = "0.3.25"
futures = "0.3.25"
url = "2.3.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
