[package]
name = "minesweeper_core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Core logic for Minesweeper game"
homepage = "https://github.com/etoledom/minesweeper_core"
documentation = "https://github.com/etoledom/minesweeper_core"
repository = "https://github.com/etoledom/minesweeper_core"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.0"

[dev-dependencies]
criterion = "0.8.2"
piston_window = "0.127.0"

[[bench]]
name = "selected"
harness = false
