[package]
name = "minesboomer_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minesweeper_multiplayer = { path = "../multiplayer" }

tokio-tungstenite = "0.18.0"
tokio = { version = "1.23.0", features = ["full"] }
futures-util = "0.3.25"
futures = "0.3.25"
tower-http = { version = "0.5", features = ["fs"] }

axum = { version = "0.8", features = ["ws"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
